# SNP2Pheno

./: .gitignore  FUTURE_TASK_LIST.md  LICENSE.MIT  README.md
SNP2PHENO_ptt/: CMakeLists.txt  CMakeLists_Georg.egal.txt  CMakeUserPresets.json  debugconsole.cpp  debugconsole.h  main.cpp  main.qml  resources.qrc  snp_list_test.txt  snpdatabase.cpp  snpdatabase.h  vcf_to_snp.cpp  vcf_to_snp.h  vcfparsercontroller.cpp  vcfparsercontroller.h  vcfworker.cpp  vcfworker.h  windowlauncher.cpp
SNP2PHENO_ptt/QML/: AFQEditor.qml  main.qml
SNP2PHENO_ptt/Test_Compatibility_Python/Test_Compatibility_Python/x64/Debug/: Test_Compatibility_Python.ilk
SNP2PHENO_ptt/VCF_samples/: VCF_sample1.vcf  VCF_sample_phased1.vcf
SNP2PHENO_ptt/components/: HeaderBar.qml  Tab.qml  TabBar.qml
SNP2PHENO_ptt/controller/: Controller.cpp  Controller.h
SNP2PHENO_ptt/controller/headers/: FileData.h  FileParsedState.h
SNP2PHENO_ptt/controller/sources/: 23andme_parse.py
SNP2PHENO_ptt/headers/: debugconsole.h  vcf_to_snp.h  vcfparsercontroller.h  vcfworker.h  windowlauncher.h
SNP2PHENO_ptt/sources/: debugconsole.cpp  snpdatabase.cpp  vcf_to_snp.cpp  vcfparsercontroller.cpp  vcfworker.cpp  windowlauncher.cpp
SNP2PHENO_ptt/view/: ContentContainer.qml  ContentTable.qml  ContentVisualization.qml  FileSelection.qml  Logo.qml  PhenotypeSelection.qml  Tab.qml  TabBar.qml
SNP2PHENO_ptt/visualization/: README.txt  app.js  human_head_SK.glb  human_with_eyes_no_helpers.glb  index.html  package-lock.json  package.json
database/: UniProtHTMLParser.py  UniProtParser.py  create_database.py  database.py
python_scripts/Clustering/: Hierarchial_2 1.py  Hierarchial_BloodType.py  Hierarchial_EyeColor.py
python_scripts/Clustering/clustering_data/: genotype_bloodtype.csv  genotype_eyecolor.csv  phenotype_bloodtype.csv  phenotype_eyecolor.csv
python_scripts/Database/: README.md  create_database.py  database_operations.py  fill_database_with_snpList.py
python_scripts/Future-House/: future_house.py
python_scripts/GWAS/: Association.py  GwasToDb.py  parseEyeColors.py  parseSNPs.py  parse_GWAS.py  parsed_results_biological sex.csv  parsed_results_blood_typeGene.csv  parsed_results_eye color.csv  parsed_results_hair color.csv  parsed_results_handedness.csv  parsed_results_rs1449123735.csv  testParseSNPHairColor.py
python_scripts/GWAS/ClusteringGWAS/: deleteDuplicates.py  parseSNPs.py  significant_snps.txt  snp_ids_list.txt  snp_ids_listBloodTypes.txt  snp_ids_listBloodTypesGene.txt  snp_ids_listHairColor.txt  snp_ids_listHandedness.txt  snp_ids_listSex.txt  testParseSNP.py  testParseSNPBloodType.py  testParseSNPBloodTypeGene.py  testParseSNPHandedness.py  testParseSNPSex.py  unique_BloodTypeGene_rsIDs.csv
python_scripts/OpenSNP/: openSNPParser.py  parse_OpenSNP_file.py
python_scripts/Parser/: 23andme_parse.py
python_scripts/Pickle/Test_Compatibility_Python/Test_Compatibility_Python/: RF_eyecolor.pkl  filename.txt  main.cpp  pkl_load.py
python_scripts/Pickle/Test_Compatibility_Python/Test_Compatibility_Python/x64/Debug/: Test_Compatibility_Python.exe.recipe  Test_Compatibility_Python.ilk
python_scripts/Pickle/Test_Compatibility_Python/Test_Compatibility_Python/x64/Debug/Test_Com.5bb0dba4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Test_Compatibility_Python.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
python_scripts/UniProt/: UniProtAPIParser.py  UniProtHTMLParser.py
